res/examples/valid/const_decl_with_existing_type_alias_in_closed_scope.eg
{
    type A = number;
};

const A = 123;