res/examples/invalid/const_decl_with_existing_type_alias.eg
type A = number;
const A = 123;

// out: TypeError: A is already defined